--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>𝖨𝗆𝖺𝗀𝖾 𝖳𝗈 𝖯𝖽𝖿 𝖢𝗈𝗇𝗏𝖾𝗋𝗍𝖾𝗋</title>
+  <title>𝙸𝚖𝚊𝚐𝚎 𝚃𝚘 𝙿𝚍𝚏 𝙲𝚘𝚗𝚟𝚎𝚛𝚝𝚎𝚛</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
